@@ -112,3 +112,24 @@
 ## the id of the VM. If set to 'None' the first public IPv4 or IPv6 address
 ## of the VM will be used.
 #CYCLADES_SERVERS_FQDN = 'snf-%(id)s.vm.example.synnefo.org'
+#
+## Description of applied port forwarding rules (DNAT) for Cyclades VMs. This
+## setting contains a mapping from the port of each VM to a tuple contaning the
+## destination IP/hostname and the new port: (host, port). Instead of a tuple a
+## python callable object may be used which must return such a tuple. The caller
+## will pass to the callable the following positional arguments, in the
+## following order:
+## * server_id: The ID of the VM in the DB
+## * ip_address: The IPv4 address of the public VM NIC
+## * fqdn: The FQDN of the VM
+## * user: The UUID of the owner of the VM
+##
+## Here is an example describing the mapping of the SSH port of all VMs to
+## the external address 'gate.example.synnefo.org' and port 60000+server_id.
+## e.g. iptables -t nat -A prerouting -d gate.example.synnefo.org \
+## --dport (61000 # $(VM_ID)) -j DNAT --to-destination $(VM_IP):22
+##CYCLADES_PORT_FORWARDING = {
+##    22: lambda ip_address, server_id, fqdn, user:
+##               ("gate.example.synnefo.org", 61000 + server_id),
+##}
+#CYCLADES_PORT_FORWARDING = {}
